day 5 part 1 done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,8 @@
         "optional": "cpp",
         "map": "cpp",
         "xtree": "cpp",
-        "regex": "cpp"
+        "regex": "cpp",
+        "sstream": "cpp",
+        "set": "cpp"
     }
 }
